# mzcst_2024

./: .gitignore  INTERFACE_ENHANCEMENTS.md  LICENCE  LICENSE  README.md  delay_test.ps1  meta_modify.py  mzcst-env-cfg.ps1  mzcst-test-raw.yml  pyproject.toml  upload_to_official.ps1  upload_to_stable.ps1  upload_to_test.ps1
src/: basic_test.py
src/mzcst_2024/: __init__.py  _global.py  common.py  component.py  curves.py  group.py  interface.py  material.py  math_.py  modeling.py  plot.py  profiles_to_shapes.py  results.py  shape_operations.py  shapes.py  transformations_and_picks.py  units.py
src/mzcst_2024/asymptotic/: __init__.py  raydata.py
src/mzcst_2024/eda/: __init__.py
src/mzcst_2024/radar/: __init__.py  channel_tensor.py
src/mzcst_2024/solver/: __init__.py  _general.py  hf.py  monitors.py
src/mzcst_2024/sources_and_ports/: __init__.py  hf.py
tests/: create_mws_project.py  delete_temp_files.py  import_test.py  parameter_calculation.py
