[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mzcst_2024"
version = "2025.5.22.2305"
authors = [{ name = "Li Mengzi", email = "limengzi96@outlook.com" }]
description = "An interface for Python 3.10 and CST Studio Suite 2024. It may work on newer versions, but it is not guaranteed."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Operating System :: Microsoft :: Windows",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  'numpy>=1.21.4',
  'scipy>=1.5.4',
  'matplotlib>=3.3.4',
  'h5py>=3.6.0',
]

[project.urls]
Homepage = "https://github.com/PlasticLie/mzcst_2024"
Issues = "https://github.com/PlasticLie/mzcst_2024/issues"
